
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Aug-2010 Ian MacLennan
 # [#21598] Unable to logout ( front end ) if cache enabled
 # [#21630] Dropdown order in plug in manager
 # [#21632] Dropdown order in article manager
 # [#21633] Dropdown order in category manager
 # [#21634] Dropdown order in menu manager

06-Aug-2010 Jean-Marie Simonet
 # [#21740] Media Manager Submenu not indicating active option. Thanks Andrea.

05-Aug-2010 Jean-Marie Simonet
 # [#21599] Featured articles - article link to parent category - 500 error. Thanks Mathavan
 # [#21433] Title disappear when you select the menu item type. Thanks Bill
 #$ [#21358] Breadcrumbs "You are here" text displays regardless of Breadcrumbs settings. Thanks Michael.
 #$ [#21731] Newsfeeds /menu-items params correction + changes to weblinks. Thanks Bill.

04-Aug-2010 Jean-Marie Simonet
 [#21662] Single contact view not treating category access issue correctly. Thanks Elin.
 
04-Aug-2010 Andrew Eddie
 # Fixed issue [#21536] admin/com_users: report view. Is this being used or worked on?
 # Fixed issue [#20899] Changing 'Home' to a 'External Link' or 'Menu Item Alias' causes '404 Component Not Found' error on homepage (Zach Garner, Tim Plummer, Christophe, Michael Babker).
 # Fixed issue [#21711] Global Configuration button in Control Panel (Sander Potjer, Michael Babker).
 # Fixed issue [#21318] Caching causes problems with admin parameters (Elin Waring, Klas Berlič1).

03-Aug-2010 Jean-Marie Simonet
 $ Adding missing strings, deleting redundant ones for com_contact.
 $ Adding/normalizing some .sys.ini strings/values com_user, com_weblinks
 # [#21706] Modifying [#21159] to let cat have the same name/alias when not in same tree when save&copy
 #$ [#21712] Weblinks /menu-items params correction. Thanks Bill.
 # [#21694] Beez Templates xml files reference to language folder
 
03-Aug-2010 Andrew Eddie